extension/CSS/nitro.css
@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');

/* HTML Element Style */

head {
    font-family: 'Lato';
    color: white;
}

body {
    font-family: 'Lato';
    color: #EEEEEE;
}

.button {
    font-size: 24px;
    width: 100px;
    font-size: 25px;
    font-family: 'Lato';
    box-shadow: inset 0 0 5px #333333;
    border-radius: 12px;
    background-color: #6388E8;
    border: none;
    color: white;
    width: 120px;
    cursor: pointer;
}

table {
    width: 90% !important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2%;
    font-family: 'Lato';
    color: #FBA642;
}

tr {
    border-bottom: 1px solid #C0C0C0;
}



/* Custom Class Styles */

.card {
    text-align: center;
    border-radius: 12px;
    background-color: #3E3D3D;
    border-width: 5px;
    width: 240px;
    border-color: #C0C0C0;
    border-style: solid;
    min-height: 240px;
}

.header {
    margin-top: auto;
    margin-bottom: auto;
    
    font-size: 24px;
    box-shadow: inset 0 0 3px #333333;
    border-radius: 12px;
    background-color: #6388E8;
    border-width: none;
    width: 239px;
    height: 45px;
    position: relative;
}

.header img {
    vertical-align: middle;
    float: left;
    padding-left: 10px;
    padding-top: 7px;
}

.header p {
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 45px;
    width: 149px;
    float: right;
    padding-top: 7px;
    font-weight: bold;
    text-align: center;
}

.headerWOBackButton {
    margin-top: auto;
    margin-bottom: auto;
    
    font-size: 20px;
    box-shadow: inset 0 0 3px #333333;
    border-radius: 6px 6px 0 0;
    background-color: #57B582;
    border-width: none;
    width: 240px;
    height: 40px;
    position: relative;
}

.headerWOBackButton p {
    padding-top: 6px;
    font-weight: bold;
    margin: 0;
}

.container {
    display: flex;
}

.task {
    text-align: left;
    font-size: 11px;
}

.tasksHeader {
    float: left;
    width: 40%;
}

.teamHeader {
    display: inline-block;
    width: 30%;
    padding-right: 14%;
}

.pointsHeader {
    float: right;
    width: 9.999%;
    padding-right: 6%;
}

.taskHeader {
    width: 80%;
    margin: auto;
}

.btnText {
    padding-left: 60px;
    width: 80%;
    margin: auto;
}

.td1 {
    text-align: left;
    white-space: nowrap;
    padding-left: 10px;
}

.td2 {
    text-align: left;
    padding-left: 10px;
}

.tasksCol {
    width: 35%;
}

.teamCol {
    width: 20%;
    padding-left: 6%;
}

.pointsCol {
    width: 10%;
    padding-left: 6%;
}

/* Custom id Styles */

#back {
    background-image: url('../images/blueBackButton.JPG');
    background-size: contain;
    background-repeat: no-repeat;
    width: 40px;
    height: 39px;
    border: 0;
    margin-top: 3px;
    cursor: pointer;
}

#delete {
    background-image: url('../images/delete.png');
    background-size: contain;
    background-color: #3E3D3D;
    width: 17px;
    height: 17px;
    position: relative;
    bottom: 17px;
    left: 16px;
    border: 0;
    clear: both;
    cursor: pointer;
}

#check {
    background-image: url('../images/square_check.png');
    background-size: contain;
    background-color: #3E3D3D;
    width: 18px;
    height: 18px;
    border: 0;
    position: relative;
    bottom: 17px;
    left: 38px;
    float: left;
    clear: both;
    cursor: pointer;
}

#user-table {
    color: #FFFFFF;
    padding-bottom: 10px;
    width: 100%;
}

#user-profile-table {
    color: #FFFFFF;
    padding-top: 10px;
    width: 100%
}

#taskTable {
    font-family: 'Lato';
    color: #FBA642;
    border-collapse: collapse;
    text-align: left;
    margin-left: 5%;
    width: 91%;
}

#taskBreakdown {
    width: 80%;
    align-self: center;
    margin-left: 10%;
}

#tasksLine {
    margin: 0;
    margin-left: 5%;
    margin-bottom: 1%;
    width: 90%;
    align-self: center;
}

#teamName {
    width: 49%;
    display: inline-block;
    text-align: left;
    margin: 0px;
}

#dueDate {
    width: 49%;
    display: inline-block;
    text-align: right;
    margin: 0px;
}

#taskUnderline {
    width: 80%;
    align-self: center;
}

#completeText {
    width: 49%;
    display: inline-block;
    text-align: left;
    margin: 0px;
}

#deleteText {
    width: 49%;
    display: inline-block;
    text-align: left;
    margin: 0px;
}

